syntax = "proto3";
package cosmos_sdk.x.ibc.commitment.v1;

option go_package = "github.com/datachainlab/fabric-ibc/x/ibc/xx-fabric/types";

import "third_party/proto/gogoproto/gogo.proto";
import "commitment/types.proto";

message Header {
  ChaincodeHeader  ChaincodeHeader = 1 [(gogoproto.nullable) = true];
  ChaincodeInfo    ChaincodeInfo   = 2 [(gogoproto.nullable) = true];
  MSPConfigs       MSPConfigs      = 3 [(gogoproto.nullable) = true];
  MSPPolicies      MSPPolicies     = 4 [(gogoproto.nullable) = true];
}

message ChaincodeHeader {
  Sequence         sequence   = 1 [(gogoproto.nullable) = false];
  CommitmentProof  proof      = 2 [(gogoproto.nullable) = false];
}

message ChaincodeInfo {
  string         channel_id         = 1;
  ChaincodeID    chaincode_id       = 2 [(gogoproto.nullable) = false];
  bytes          endorsement_policy = 3;
  bytes          ibc_policy         = 4;
  MessageProof   proof              = 5;
}

message MSPInfos {
  repeated MSPInfo infos = 1 [(gogoproto.nullable) = false];
}

message MSPConfigs {
  repeated MSPConfig configs = 1 [(gogoproto.nullable) = false];
}

message MSPPolicies {
  repeated MSPPolicy policies = 1 [(gogoproto.nullable) = false];
}

message MSPInfo {
  // MSP ID
  string        ID     = 1 [(gogoproto.jsontag) = "id,omitempty"];
  bytes         config = 2;
  bytes         policy = 3;
}

message MSPConfig {
  // MSP ID
  string        ID     = 1 [(gogoproto.jsontag) = "id,omitempty"];
  bytes         config = 2;
  MessageProof  proof  = 3;
}

message MSPPolicy {
  // MSP ID
  string        ID     = 1 [(gogoproto.jsontag) = "id,omitempty"];
  bytes         policy = 2;
  MessageProof  proof  = 3;
}

// ref. https://github.com/hyperledger/fabric-chaincode-java/blob/392cf9cb740c42e0376ecdbbb015285b5a74ba97/fabric-chaincode-protos/src/main/protos/peer/chaincode.proto#L21
message ChaincodeID {
  //deploy transaction will use the path
  string path = 1;

  //all other requests will use the name (really a hashcode) generated by
  //the deploy transaction
  string name = 2;

  //user friendly version name for the chaincode
  string version = 3;
}

message Prefix {
  bytes value = 1 [(gogoproto.moretags) = "yaml:\"value\""];
}

message CommitmentProof {
  option (gogoproto.equal) = true;
  
  bytes proposal = 1;
  uint32 ns_index = 2;
  uint32 write_set_index = 3;
  repeated bytes identities = 4;
  repeated bytes signatures = 5;
}

message MessageProof {
  option (gogoproto.equal) = true;

  repeated bytes identities = 1;
  repeated bytes signatures = 2;
}
